# DeadSecMind

./: .blackboxrules  .gitignore  IMPLEMENTATION_GUIDE.md  README.md  TODO.md  package-lock.json  package.json
.blackbox/skills/sistemamonitorado/: SKILL.md
.trae/documents/: plano_privacidade_real.md
src/: App.css  App.jsx
src-tauri/: Cargo.toml  TODO.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  verification.rs  window.rs
src-tauri/src/commands/: mod.rs  network_windows.rs  notification_commands.rs  privacy_windows.rs  security_windows.rs
src-tauri/src/services/: mod.rs  notification_service.rs
src/DashboardComponent/: GraficoDeTráfego.css  GraficoDeTráfego.jsx  MapaDeRede.css  MapaDeRede.jsx  PainelDeAlertas.css  PainelDeAlertas.jsx  StatusDeSeguranca.css  StatusDeSeguranca.jsx
src/components/: BarraLateral.css  BarraLateral.jsx  Cabecalho.css  Cabecalho.jsx  Configuracao.css  Configuracao.jsx  Dashboard.css  Dashboard.jsx  ItemDaBarraLateral.jsx  Privacidade.css  Privacidade.jsx  Protecao.css  Protecao.jsx  Verificacao.css  Verificacao.jsx
src/hooks/: useSystemMonitoring.js
src/styles/: global.css
